# djangostarterkit

./: .dockerignore  .env.template  Dockerfile  MakeFile  README.md  docker-compose.yml  pyproject.toml
myproject/: settings.py
