[tool.poetry]
name = "djangostarterkit"
version = "0.0.1"
description = "Django start kit that's dockerized and ready for a SaaS application with Poetry for dependency management involves several steps"
authors = ["Rohit Sthapit <nhuzaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
Django = "5.0.3"
djangorestframework = "^3.15.1"
opencv-python = "^4.6.0"
django-oauth-toolkit = "^2.1.0"
requests = "^2.28.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
ipdb = "^0.13.13"
ipython = "^8.23.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
